--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,11 @@
   padding: 0;
   box-sizing: border-box;
 }
+/* styles.css */
+img {
+  width: 100%;
+  height: auto;
+}
 
 /* Apply a basic font stack */
 body {
@@ -21,7 +26,12 @@ body {
 }
 
 /* Set default styles for headings */
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin-bottom: 1rem;
   font-weight: bold;
 }
