--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,7 +22,7 @@ img {
 body {
   font-family: Arial, sans-serif;
   line-height: 1.6;
-  background-color: #1a202c; /* Dark background color */
+  background-color: #f9fafc; /* Dark background color */
 }
 
 /* Set default styles for headings */
